fixed some spacing issues in cover letter

--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,7 @@ ul {
 /* End of media max-width 820px */
 .hero-area {
   width: 100%;
-  height: calc(100vh - 3rem);
+  height: 100vh;
   display: flex;
   gap: 2rem;
   flex-direction: column;
