--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,6 @@
 .hero-area {
     width: 100%;
-    height: calc(100vh - 3rem);
+    height: 100vh;
     display: flex;
     gap: 2rem;
     flex-direction: column;
